--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,2 +1,3 @@
 center 
-  h1 Russian Sweet Box
+  h3 Get top russian sweets and cholocate monthly.
+  = link_to 'Subsribe', root_path, class: 'button success'
