Add box picture

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1486,3 +1486,8 @@ $include-html-global-classes: $include-html-classes;
 // $include-legacy-visibility-classes: true;
 
 @import 'foundation';
+
+.box img {
+    margin-top:    rem-calc(20);
+    margin-bottom: rem-calc(20);
+}
