--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,3 +1,35 @@
-center 
-  h3 Get top russian sweets and cholocate monthly.
-  = link_to 'Subsribe', root_path, class: 'button success'
+.row
+  .columns.large-10.small-centered.box
+    .text-center= image_tag 'box.jpg'
+.row
+  .columns
+    h4.text-center Get exclusive russian sweets & cholocates monthly
+.row
+  .columns.large-5.small-centered
+    = link_to 'Subsribe', root_path, class: 'button expand'
+.row
+  .columns
+    p.text-center Free worldwide shipping
+.row.how_it_works
+  hr
+  h3 How it Works
+  ol
+    li Subscibe to Russian Crate
+    li We shop for you in Russia and pack your box
+    li You get unique russian candy every month
+    li Enjoy russian sweets and chocolates!
+.row.greeting
+  hr
+  .how_much
+  h3 How much candy will I get
+  p Each month we will send you two pound of russian candy & chocolates. For a special occasion and holidays we will prepared premium box with surprise.
+  .why
+  h3 Why are we doing this
+  p We are young married couple from Russia. We spent a lot of time abroad. Each time we were out of country we missed russian sweet & chocolates a lot. They are very tasty and very unique, they worth to be tried by you.
+  h3 Free worlwide shipping
+  p
+  h3 From russia with love
+  p
+.row.community
+  h3 Join our community
+
