Add how it works

--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -27,9 +27,7 @@
   h3 Why are we doing this
   p We are young married couple from Russia. We spent a lot of time abroad. Each time we were out of country we missed russian sweet & chocolates a lot. They are very tasty and very unique, they worth to be tried by you.
   h3 Free worlwide shipping
-  p
-  h3 From russia with love
-  p
-.row.community
-  h3 Join our community
+  p Let us take care of shipping. FREE Shipping is available worldwide. We ship by Russian Post Avia. We will provide you with a barcode and you track your sweet box on all the way to you.
+  h3 From Russia with love
+  p We eat russian candy since we were kids. So we know the good ones. All of the candy & chocolates are handpicked and loved by us.
 
