--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -20,14 +20,27 @@
     li Enjoy russian sweets and chocolates!
 .row.greeting
   hr
-  .how_much
-  h3 How much candy will I get
-  p Each month we will send you two pound of russian candy & chocolates. For a special occasion and holidays we will prepared premium box with surprise.
-  .why
-  h3 Why are we doing this
-  p We are young married couple from Russia. We spent a lot of time abroad. Each time we were out of country we missed russian sweet & chocolates a lot. They are very tasty and very unique, they worth to be tried by you.
-  h3 Free worlwide shipping
-  p Let us take care of shipping. FREE Shipping is available worldwide. We ship by Russian Post Avia. We will provide you with a barcode and you track your sweet box on all the way to you.
-  h3 From Russia with love
-  p We eat russian candy since we were kids. So we know the good ones. All of the candy & chocolates are handpicked and loved by us.
+  .row.how_much
+    .columns.small-4.large-1
+      h3
+        i.fi-shopping-cart
+    .columns.small-8.large-5
+      h3 How much candy will I get
+      p Each month we will send you two pound of russian candy & chocolates. For a special occasion and holidays we will prepared premium box with surprise.
+    .columns.small-4.large-1
+      i.fi-male-female
+    .columns.small-8.large-5
+      h3 Why are we doing this
+      p We are young married couple from Russia. We spent a lot of time abroad. Each time we were out of country we missed russian sweet & chocolates a lot. They are very tasty and very unique, they worth to be tried by you.
+  .row
+    .columns.small-4.large-1
+      i.fi-web
+    .columns.small-8.large-5
+      h3 Free worlwide shipping
+      p Let us take care of shipping. FREE Shipping is available worldwide. We ship by Russian Post Avia. We will provide you with a barcode and you track your sweet box on all the way to you.
+    .columns.small-4.large-1
+      i.fi-heart
+    .columns.small-8.large-5
+      h3 From Russia with love
+      p We eat russian candy since we were kids. So we know the good ones. All of the candy & chocolates are handpicked and loved by us.
 
