--- a/app/views/layouts/_topbar.html.slim
+++ b/app/views/layouts/_topbar.html.slim
@@ -1,11 +1,8 @@
 nav.top-bar data-topbar="" role="navigation"
   ul.title-area
     li.name
-      h1= link_to "RUSSIAN SWEET BOX", root_path
+      h1= link_to "RUSSIAN CRATE", root_path
   section.top-bar-section
     ul.right
-      li= link_to "Subscribe", root_path
-      li= link_to "How it works", root_path
-      li= link_to "Crate", root_path
       li.has-form
         = link_to "Login", root_path, class: "button"
