--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -3,23 +3,35 @@
     .text-center= image_tag 'box.jpg'
 .row
   .columns
-    h4.text-center Get exclusive russian sweets & cholocates monthly
+    h4.text-center Get exclusive russian candy & cholocates monthly
 .row
   .columns.large-5.small-centered
     = link_to 'Subsribe', root_path, class: 'button expand'
 .row
   .columns
     p.text-center Free worldwide shipping
-.row.how_it_works
+
+.row.community
   hr
+  h3.text-center Feedback
+  p.text-center If you have any questions or suggestions please email us dima@russiancrate.com or alla@dima@russiancrate.com.
+  hr
+
+.row.how_it_works
   h3 How it Works
   ol
     li Subscibe to Russian Crate
     li We shop for you in Russia and pack your box
     li You get unique russian candy every month
-    li Enjoy russian sweets and chocolates!
-.row.greeting
+    li Enjoy russian candy & chocolates!
+
+.row.community
   hr
+  h3.text-center THE COMMUNITY
+  p.text-center If you like russian candy & chocolates, please join #RussianCrate Community.
+  hr
+
+.row.greeting
   .row.how_much
     .columns.small-4.large-1
       h3
@@ -36,11 +48,10 @@
     .columns.small-4.large-1
       i.fi-web
     .columns.small-8.large-5
-      h3 Free worlwide shipping
+      h3 Free worldwide shipping
       p Let us take care of shipping. FREE Shipping is available worldwide. We ship by Russian Post Avia. We will provide you with a barcode and you track your sweet box on all the way to you.
     .columns.small-4.large-1
       i.fi-heart
     .columns.small-8.large-5
       h3 From Russia with love
       p We eat russian candy since we were kids. So we know the good ones. All of the candy & chocolates are handpicked and loved by us.
-
