--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,5 +10,8 @@ html lang="en"
     = csrf_meta_tags
   body
     == render "layouts/topbar"
+    .flash
+      p.notice = notice
+      p.alert  = alert
     == yield
     == render "layouts/footer"
