--- a/app/views/layouts/_topbar.html.slim
+++ b/app/views/layouts/_topbar.html.slim
@@ -4,5 +4,12 @@ nav.top-bar data-topbar="" role="navigation"
       h1= link_to "RUSSIAN CRATE", root_path
   section.top-bar-section
     ul.right
-      li.has-form
-        = link_to "Login", root_path, class: "button"
+      - if user_signed_in?
+        li.has-form
+          = link_to "Logout", destroy_user_session_path, method: :delete, class: "button"
+      - else
+        li
+          = link_to "Sign up", new_user_registration_path
+        li.divider
+        li
+          = link_to "Login", new_user_session_path
