--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -6,7 +6,7 @@
     h4.text-center Get exclusive russian candy & cholocates monthly
 .row
   .columns.large-5.small-centered
-    = link_to 'Subsribe', root_path, class: 'button expand'
+    = link_to 'Subsribe', new_subscription_path, class: 'button expand'
 .row
   .columns
     p.text-center Free worldwide shipping
