Add stripe form to subscription

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1508,6 +1508,9 @@ h3 {
         font-size: rem-calc(70);
     }
 }
+#stripe_error {
+
+}
 footer {
     margin-top: rem-calc(40);
     background-color: $topbar-bg-color;
