--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,8 +6,9 @@ html lang="en"
     title Russian Sweet Box
     = stylesheet_link_tag    "application"
     = javascript_include_tag "vendor/modernizr"
-    = javascript_include_tag "application", 'data-turbolinks-track' => true
+    = javascript_include_tag "https://js.stripe.com/v1/", "application", 'data-turbolinks-track' => true
     = csrf_meta_tags
+    = tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY
   body
     == render "layouts/topbar"
     = display_flash_messages
