--- a/app/views/subscriptions/_form.html.slim
+++ b/app/views/subscriptions/_form.html.slim
@@ -33,25 +33,29 @@
   = f.text_field :stripe_card_token
 
   / Billing Information
-  h3 Billing Information
-  .row
-    .columns.large-8
-      = label_tag :card_number, "Credit Card Number"
-      = text_field_tag :card_number, nil, name: nil
-    .columns.large-4
-      = label_tag :card_code, "Security Code on Card (CVV)"
-      = text_field_tag :card_code, nil, name: nil
-  .row
-    .columns.large-8
-      = label_tag :card_month, "Card Expiration Month"
-      = select_month nil, {add_month_numbers_true: true}, {name: nil, id: "card_month"}
-    .columns.large-4
-      = label_tag :select_year, "Year"
-      = select_year nil, {start_year: Date.today.year, end_year: Date.today.year+15}, {name: nil, id: "card_year"}
-  .row
-    / Form fields omitted
-    .columns.large-12
-      #stripe_error
-        noscript JavaScript is not enabled and is required for this form. First enable it in your web browser settings
-    .columns.large-12
-      = f.submit 'Subscribe'
+  - if @subscription.stripe_card_token
+    Credit card has been provided
+  - else
+    h3 Billing Information
+    .row
+      .columns.large-8
+        = label_tag :card_number, "Credit Card Number"
+        = text_field_tag :card_number, nil, name: nil
+      .columns.large-4
+        = label_tag :card_code, "Security Code on Card (CVV)"
+        = text_field_tag :card_code, nil, name: nil
+    .row
+      .columns.large-8
+        = label_tag :card_month, "Card Expiration Month"
+        = select_month nil, {add_month_numbers_true: true}, {name: nil, id: "card_month"}
+      .columns.large-4
+        = label_tag :select_year, "Year"
+        = select_year nil, {start_year: Date.today.year, end_year: Date.today.year+15}, {name: nil, id: "card_year"}
+    .row
+      / Form fields omitted
+      .columns.large-12
+        #stripe_error
+          noscript JavaScript is not enabled and is required for this form. First enable it in your web browser settings
+
+  .columns.large-12
+    = f.submit 'Subscribe'
