--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -14,7 +14,8 @@
       <th>Country</th>
       <th>Postal code</th>
       <th>User</th>
-      <th colspan="3"></th>
+      <th>ID</th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
@@ -29,7 +30,8 @@
         <td><%= subscription.state %></td>
         <td><%= subscription.country %></td>
         <td><%= subscription.postal_code %></td>
-        <td><%= subscription.user %></td>
+        <td><%= subscription.user.try(:email) %></td>
+        <td><%= subscription.stripe_customer_token %></td>
         <td><%= link_to 'Show', subscription %></td>
         <td><%= link_to 'Destroy', subscription, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
