--- a/app/views/subscriptions/_form.html.slim
+++ b/app/views/subscriptions/_form.html.slim
@@ -30,7 +30,7 @@
     .columns.large-4
       = f.text_field :postal_code
   = f.hidden_field :user_id, value: current_user.try(:id)
-  = f.text_field :stripe_card_token
+  = f.hidden_field :stripe_card_token
 
   / Billing Information
   - if @subscription.stripe_card_token
