Delegate to yandex

--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -14,7 +14,7 @@
 .row.community
   hr
   h3.text-center Feedback
-  p.text-center If you have any questions or suggestions please email us dima@russiancrate.com or alla@dima@russiancrate.com.
+  p.text-center If you have any questions or suggestions please email us dima@russiancrate.com or alla@russiancrate.com.
   hr
 
 .row.how_it_works
