--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -3,7 +3,7 @@
     .text-center= image_tag 'box.jpg'
 .row
   .columns
-    h4.text-center Get exclusive russian candy & cholocates monthly
+    h4.text-center Get exclusive russian candy & cholocates for $25 / month
 .row
   .columns.large-5.small-centered
     = link_to 'Subsribe', new_subscription_path, class: 'button expand'
